# ukentomology_JLG

ukentomology_JLG/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ukentomology_JLG/docs/: Makefile  conf.py  example.ipynb  make.bat
ukentomology_JLG/src/data/: ukentomology_data.csv
ukentomology_JLG/src/ukentomology_JLG/: __init__.py  ukentomology_JLG.py
ukentomology_JLG/tests/: test_ukentomology_JLG.py
