[tool.poetry]
name = "ukentomology_JLG"
version = "0.1.0"
description = "A package for identifying and locating entomological specimens at UK museums"
authors = ["Jessica L Gunson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.26.0"
resources = "^0.0.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
